--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -834,7 +834,7 @@
   "initial_message_description": "The first message the agent will say when starting a call",
   "having_trouble_importing": "Having trouble importing?",
   "learn": "Learn",
-  "learn_how_to_get_your_terminator": "Learn how to get your Terminator and SIP",
+  "learn_how_to_get_your_terminator": "Learn how to get your Termination URI and SIP trunk credentials",
   "phone_number_subscription_cancelled_successfully": "Phone number subscription canceled successfully",
   "updating": "Updating",
   "round_robin": "Round Robin",
@@ -862,7 +862,7 @@
   "cal_ai_agent": "Cal.ai Agent",
   "test_cal_ai_agent": "Test Cal.ai Agent",
   "are_you_sure_you_want_to_delete_workflow_step": "Are you sure you want to delete this workflow step?",
-  "are_you_still_want_to_unsubscribe": "Are you sure you want to unsubscribe the phone number from this agent?",
+  "do_you_still_want_to_unsubscribe": "Do you still want to unsubscribe the phone number from this agent?",
   "the_action_will_disconnect_phone_number": "This action will disconnect the phone number from the agent. The agent will not be able to make calls until a new phone number is connected.",
   "cal_ai_phone_numbers": "Cal AI Phone Numbers",
   "cal_ai_phone_numbers_description": "Manage your Cal AI Phone Numbers",
