--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -2177,6 +2177,8 @@
   "no_event_types_found": "No event types found",
   "average_event_duration": "Average Event Duration",
   "bookings_by_hour": "Bookings by Hour",
+  "most_bookings_scheduled": "Most Bookings Scheduled",
+  "least_bookings_scheduled": "Least Bookings Scheduled",
   "most_booked_members": "Most Booked",
   "least_booked_members": "Least Booked",
   "events_created": "Events Created",
