add routing forms to active on dropdown

--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -1396,6 +1396,8 @@
   "may_require_confirmation": "May require confirmation",
   "nr_event_type_one": "{{count}} event type",
   "nr_event_type_other": "{{count}} event types",
+  "nr_routing_form_one": "{{count}} routing form",
+  "nr_routing_form_other": "{{count}} routing forms",
   "count_team_one": "{{count}} team",
   "count_team_other": "{{count}} teams",
   "add_action": "Add action",
@@ -1511,7 +1513,9 @@
   "2fa_required": "Two factor authentication required",
   "incorrect_2fa": "Incorrect two factor authentication code",
   "which_event_type_apply": "Which event type will this apply to?",
+  "which_routing_form_apply": "Which routing form will this apply to?",
   "apply_to_all_event_types": "Apply to all, including future event types",
+  "apply_to_all_routing_forms": "Apply to all, including future routing forms",
   "apply_to_all_teams": "Apply to all team and user event types",
   "which_team_apply": "Which team will this apply to?",
   "no_workflows_description": "Workflows enable simple automation to send notifications & reminders enabling you to build processes around your events.",
