--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -1602,7 +1602,9 @@
   "event_duration_info": "The event duration",
   "event_time_info": "The event start time",
   "event_type_not_found": "EventType not Found",
+  "location_variable": "Location",
   "location_info": "The location of the event",
+  "additional_notes_variable": "Additional notes",
   "additional_notes_info": "The additional notes of booking",
   "attendee_name_info": "The person booking's name",
   "organizer_name_info": "Organizer's name",
@@ -2115,6 +2117,7 @@
   "can_you_try_again": "Can you try again with a different time?",
   "verify": "Verify",
   "timezone_info": "The timezone of the person receiving",
+  "timezone_variable": "Timezone",
   "event_end_time_variable": "Event end time",
   "event_end_time_info": "The event end time",
   "cancel_url_variable": "Cancel URL",
@@ -2730,7 +2733,9 @@
   "review": "Review",
   "reviewed": "Reviewed",
   "unreviewed": "Unreviewed",
+  "rating_url_variable": "Rating url",
   "rating_url_info": "The URL for Rating Feedback Form",
+  "no_show_url_variable": "No Show url",
   "no_show_url_info": "The URL for No Show Feedback",
   "no_support_needed": "No Support Needed?",
   "hide_support": "Hide Support",
@@ -2920,8 +2925,10 @@
   "row": "row",
   "rows": "rows",
   "attendee_timezone_variable": "Attendee Timezone",
+  "event_start_time_in_attendee_timezone_variable": "Event Start Time In Attendee Timezone",
   "event_start_time_in_attendee_timezone_info": "Event Start Time In Attendee Timezone",
   "event_end_time_in_attendee_timezone_info": "Event End Time In Attendee Timezone",
+  "event_end_time_in_attendee_timezone_variable": "Event End Time In Attendee Timezone",
   "salesforce_create_event_on_contact": "Create event on contact, if it exists. Else fallback to lead",
   "salesforce_owner_name_to_change": "Owner name to change",
   "no_filter_set": "No filter set",
@@ -3322,7 +3329,7 @@
   "pbac_desc_delete_roles": "Delete roles",
   "pbac_desc_manage_roles": "All actions on roles across organization teams",
   "pbac_desc_create_workflows": "Create and set up new workflows",
-  "pbac_desc_view_workflows": "View existing workflows and their configurations", 
+  "pbac_desc_view_workflows": "View existing workflows and their configurations",
   "pbac_desc_update_workflows": "Edit and modify workflow settings",
   "pbac_desc_delete_workflows": "Remove workflows from the system",
   "pbac_desc_manage_workflows": "Full management access to all workflows",
@@ -3472,5 +3479,19 @@
   "webhook_metadata": "Metadata",
   "stats": "Stats",
   "booking_status": "Booking status",
+  "form_submitted_trigger": "When routing form is submitted",
+  "form_submitted_no_event_trigger": "When routing form is submitted and no booking is created",
+  "how_long_after_form_submitted_no_event": "How long after the form was submitted?",
+  "form_name_variable": "Form Name",
+  "form_submitter_name_variable": "Form Submitter Name",
+  "form_submitter_email_variable": "Form Submitter Email",
+  "form_submitted_date_variable": "Form Submitted Date",
+  "form_submitted_time_variable": "Form Submitted Time",
+  "form_responses_variable": "Form Responses",
+  "team_name_variable": "Team Name",
+  "how_form_variables": "How to use form variables",
+  "how_routing_forms_responses_as_variables": "How do I use routing form responses as variables?",
+  "routing_form_field_identifier": "Routing Form Field Label",
+  "ignore_special_characters_routing_forms": "Use your routing form field identifier exactly as it appears",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Add your new strings above here ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
