--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -2179,6 +2179,8 @@
   "bookings_by_hour": "Bookings by Hour",
   "most_bookings_scheduled": "Most Bookings Scheduled",
   "least_bookings_scheduled": "Least Bookings Scheduled",
+  "most_bookings_completed": "Most Bookings Completed",
+  "least_bookings_completed": "Least Bookings Completed",
   "most_booked_members": "Most Booked",
   "least_booked_members": "Least Booked",
   "events_created": "Events Created",
