Teams settings completed

--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -754,6 +754,9 @@
   "team_deletion_cannot_be_undone": "Be careful. Team deletion cannot be undone.",
   "back": "Back",
   "cancel": "Cancel",
+  "paste_emails_comma_separated": "Paste comma separated emails",
+  "invite_members": "Invite members",
+  "selected_count": "Selected {{count}}",
   "cancel_all_remaining": "Cancel all remaining",
   "apply": "Apply",
   "cancel_event": "Cancel event",
