Booking notes added

--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -1,4 +1,5 @@
 {
+  "meeting_notes_saved": "Meeting notes saved",
   "view": "View",
   "calendly_import": "Import from calendly",
   "calendly_authorized": "Calendly already imported",
