Designation and event-types

--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -1,4 +1,5 @@
 {
+  "business_type": "Business type",
   "meeting_notes_saved": "Meeting notes saved",
   "phone_number_required": "Phone number is required",
   "number_valid": "Number is valid",
