fix: add variables dropdown UI  (#23214)
* Ui fixes for variables dropdown

* remove other translation keys

* fix test

---------

Co-authored-by: CarinaWolli <wollencarina@gmail.com>

--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -1602,7 +1602,9 @@
   "event_duration_info": "The event duration",
   "event_time_info": "The event start time",
   "event_type_not_found": "EventType not Found",
+  "location_variable": "Location",
   "location_info": "The location of the event",
+  "additional_notes_variable": "Additional notes",
   "additional_notes_info": "The additional notes of booking",
   "attendee_name_info": "The person booking's name",
   "organizer_name_info": "Organizer's name",
@@ -2115,6 +2117,7 @@
   "can_you_try_again": "Can you try again with a different time?",
   "verify": "Verify",
   "timezone_info": "The timezone of the person receiving",
+  "timezone_variable": "Timezone",
   "event_end_time_variable": "Event end time",
   "event_end_time_info": "The event end time",
   "cancel_url_variable": "Cancel URL",
@@ -2730,7 +2733,9 @@
   "review": "Review",
   "reviewed": "Reviewed",
   "unreviewed": "Unreviewed",
+  "rating_url_variable": "Rating url",
   "rating_url_info": "The URL for Rating Feedback Form",
+  "no_show_url_variable": "No Show url",
   "no_show_url_info": "The URL for No Show Feedback",
   "no_support_needed": "No Support Needed?",
   "hide_support": "Hide Support",
@@ -2920,8 +2925,10 @@
   "row": "row",
   "rows": "rows",
   "attendee_timezone_variable": "Attendee Timezone",
+  "event_start_time_in_attendee_timezone_variable": "Event Start Time In Attendee Timezone",
   "event_start_time_in_attendee_timezone_info": "Event Start Time In Attendee Timezone",
   "event_end_time_in_attendee_timezone_info": "Event End Time In Attendee Timezone",
+  "event_end_time_in_attendee_timezone_variable": "Event End Time In Attendee Timezone",
   "salesforce_create_event_on_contact": "Create event on contact, if it exists. Else fallback to lead",
   "salesforce_owner_name_to_change": "Owner name to change",
   "no_filter_set": "No filter set",
