--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -2177,6 +2177,8 @@
   "no_event_types_found": "No event types found",
   "average_event_duration": "Average Event Duration",
   "bookings_by_hour": "Bookings by Hour",
+  "most_booked_members": "Most Booked",
+  "least_booked_members": "Least Booked",
   "most_bookings_scheduled": "Most Bookings Scheduled",
   "least_bookings_scheduled": "Least Bookings Scheduled",
   "most_bookings_completed": "Most Bookings Completed",
@@ -3324,7 +3326,7 @@
   "pbac_desc_delete_roles": "Delete roles",
   "pbac_desc_manage_roles": "All actions on roles across organization teams",
   "pbac_desc_create_workflows": "Create and set up new workflows",
-  "pbac_desc_view_workflows": "View existing workflows and their configurations", 
+  "pbac_desc_view_workflows": "View existing workflows and their configurations",
   "pbac_desc_update_workflows": "Edit and modify workflow settings",
   "pbac_desc_delete_workflows": "Remove workflows from the system",
   "pbac_desc_manage_workflows": "Full management access to all workflows",
