--- a/apps/web/public/static/locales/es/common.json
+++ b/apps/web/public/static/locales/es/common.json
@@ -2170,6 +2170,8 @@
   "no_event_types_found": "No se encontraron tipos de eventos",
   "average_event_duration": "Duración promedio del evento",
   "bookings_by_hour": "Reservas por hora",
+  "most_booked_members": "Miembros más reservados",
+  "least_booked_members": "Miembros menos reservados",
   "events_created": "Eventos creados",
   "events_completed": "Eventos completados",
   "events_cancelled": "Eventos cancelados",
