--- a/apps/web/public/static/locales/pl/common.json
+++ b/apps/web/public/static/locales/pl/common.json
@@ -2170,6 +2170,8 @@
   "no_event_types_found": "Nie znaleziono żadnych typów wydarzeń",
   "average_event_duration": "Średni czas trwania wydarzenia",
   "bookings_by_hour": "Rezerwacje według godzin",
+  "most_booked_members": "Najczęściej rezerwowani",
+  "least_booked_members": "Najrzadziej rezerwowani",
   "events_created": "Utworzone wydarzenia",
   "events_completed": "Ukończone wydarzenia",
   "events_cancelled": "Wydarzenia anulowane",
