--- a/apps/web/public/static/locales/sr/common.json
+++ b/apps/web/public/static/locales/sr/common.json
@@ -2170,6 +2170,8 @@
   "no_event_types_found": "Nisu pronađeni tipovi događaja",
   "average_event_duration": "Prosečno trajanje događaja",
   "bookings_by_hour": "Rezervacije po satu",
+  "most_booked_members": "Najviše rezervisani",
+  "least_booked_members": "Najmanje rezervisani",
   "events_created": "Kreirani događaji",
   "events_completed": "Završeni događaji",
   "events_cancelled": "Događaji otkazani",
