fix: german translation for button in the onboarding flow

--- a/apps/web/public/static/locales/de/common.json
+++ b/apps/web/public/static/locales/de/common.json
@@ -1527,6 +1527,7 @@
   "delete_my_account": "Meinen Account löschen",
   "start_of_week": "Wochenstart",
   "recordings_title": "Aufnahmen",
+  "finish_and_start": "Einrichtung abschließen und loslegen",
   "recording": "Aufnahme",
   "happy_scheduling": "Fröhliche Terminplanung",
   "select_calendars": "Wählen Sie aus, in welchen Kalendern Sie nach Konflikten suchen wollen, um Doppelbuchungen zu vermeiden.",
