added some german also

--- a/apps/web/public/static/locales/de/common.json
+++ b/apps/web/public/static/locales/de/common.json
@@ -1528,6 +1528,7 @@
   "start_of_week": "Wochenstart",
   "recordings_title": "Aufnahmen",
   "finish_and_start": "Einrichtung abschließen und loslegen",
+  "complete_profile": "Vervollständigen Sie Ihr Profil",
   "recording": "Aufnahme",
   "happy_scheduling": "Fröhliche Terminplanung",
   "select_calendars": "Wählen Sie aus, in welchen Kalendern Sie nach Konflikten suchen wollen, um Doppelbuchungen zu vermeiden.",
