--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -1628,7 +1628,7 @@
   "transcript_from_previous_call": "Transcript from your recent call on {{appName}} is ready to download. Links are valid only for 1 Hour",
   "you_can_download_transcript_from_attachments": "You can also download transcript from attachments",
   "link_valid_for_12_hrs": "Note: The download link is valid only for 12 hours. You can generate new download link by following instructions <1>here</1>.",
-  "link_valid_for_12_hrs_description": "Note: The download link is valid only for 12 hours. You can generate new download link by following instructionss.",
+  "link_valid_for_12_hrs_description": "Note: The download link is valid only for 12 hours. You can generate new download link by following instructions",
   "create_your_first_form": "Create your first form",
   "create_your_first_form_description": "With Routing Forms you can ask qualifying questions and route to the correct person or event type.",
   "create_your_first_webhook": "Create your first Webhook",
