--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -851,12 +851,18 @@
   "create_new_workflow_agent": "Create new workflow cal.ai voice agent",
   "create_new_workflow_agent_description": "Create a new workflow cal.ai voice agent to automate your workflows",
   "phone_number_for_ai_call": "Phone number (for our agent to call)",
-  "buy_a_phone_number_or_import_one_you_already_have": "Buy a phone number or import one you already have",
+  "buy_a_phone_number_or_import_one_you_already_have": "Buy a phone number or import one you already have on twilio",
   "test_agent": "Test Agent",
   "phone_numbers": "Phone Numbers",
   "unsubscribe": "Unsubscribe",
   "delete_workflow_step": "Delete Workflow Step",
   "unsubscribe_phone_number": "Unsubscribe Phone Number",
+  "buy_a_new_number": "Buy a new number",
+  "only_us_phone_numbers_can_be_purchased_here": "Only US phone numbers can be purchased here",
+  "buy_a_new_number_description": "You can purchase a US phone number to make calls worldwide. To use numbers from other countries, import your Twilio number.",
+  "purchasable_numbers": "Purchasable Numbers",
+  "price_per_month": "${{priceInDollars}}/month",
+  "supported_call_destinations": "Supported Call Destinations",
   "no_phone_number_connected":"No phone number connected",
   "failed_to_get_workflow_step_id": "Failed to get workflow step ID",
   "cal_ai_agent": "Cal.ai Agent",
@@ -865,6 +871,7 @@
   "do_you_still_want_to_unsubscribe": "Do you still want to unsubscribe the phone number from this agent?",
   "the_action_will_disconnect_phone_number": "This action will disconnect the phone number from the agent. The agent will not be able to make calls until a new phone number is connected.",
   "cal_ai_phone_numbers": "Cal AI Phone Numbers",
+  "connect_phone_number": "Connect Phone Number",
   "cal_ai_phone_numbers_description": "Manage your Cal AI Phone Numbers",
   "import_number": "Import Number",
   "this_action_will_also": "This action will also:",
@@ -878,7 +885,7 @@
   "buy_new_number": "Buy New Number",
   "buy_number_cost_x_per_month": "Buying a phone number costs ${{priceInDollars}} per month. You will be charged monthly for each active phone number.",
   "area_code_optional": "Area Code (Optional)",
-  "buy_number_for_x_per_month": "Buy Number for ${{priceInDollars}}/month",
+  "buy_number_for_x_per_month": "Buy US Number (${{priceInDollars}}/month)",
   "no_phone_numbers": "No phone numbers",
   "phone_number_purchased_successfully": "Phone number purchased successfully",
   "cancel_phone_number_subscription": "Cancel Phone Number Subscription",
