--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -1,5 +1,9 @@
 {
   "workflows_edit_description":"Create and manage workflows to automate your event processes",
+  "edit_event_title":"Edit event",
+  "edit_event_subtitle":"Create events to share for people to book on your calendar.",
+  "custom_reply_to_email_no_verified_emails":"No verified emails configured on profile",
+  "event_icon_updated":"Event icon updated successfully",
   "identity_provider": "Identity provider",
   "trial_days_left": "You have $t(day, {\"count\": {{days}} }) left on your PRO trial",
   "day_one": "{{count}} day",
