design improvements buy number dialog

--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -858,10 +858,8 @@
   "delete_workflow_step": "Delete Workflow Step",
   "unsubscribe_phone_number": "Unsubscribe Phone Number",
   "buy_a_new_number": "Buy a new number",
-  "only_us_phone_numbers_can_be_purchased_here": "Only US phone numbers can be purchased here",
-  "buy_a_new_number_description": "You can purchase a US phone number to make calls worldwide. To use numbers from other countries, import your Twilio number.",
-  "purchasable_numbers": "Purchasable Numbers",
-  "price_per_month": "${{priceInDollars}}/month",
+  "only_us_phone_numbers_can_be_purchased_here": "You can only buy US phone numbers. For other countries, you can import your own Twilio phone number.",
+  "buy_number_for_x_per_month": "Buy a US Number for ${{priceInDollars}} per month",
   "supported_call_destinations": "Supported Call Destinations",
   "no_phone_number_connected":"No phone number connected",
   "failed_to_get_workflow_step_id": "Failed to get workflow step ID",
@@ -885,7 +883,6 @@
   "buy_new_number": "Buy New Number",
   "buy_number_cost_x_per_month": "Buying a phone number costs ${{priceInDollars}} per month. You will be charged monthly for each active phone number.",
   "area_code_optional": "Area Code (Optional)",
-  "buy_number_for_x_per_month": "Buy US Number (${{priceInDollars}}/month)",
   "no_phone_numbers": "No phone numbers",
   "phone_number_purchased_successfully": "Phone number purchased successfully",
   "cancel_phone_number_subscription": "Cancel Phone Number Subscription",
@@ -1541,7 +1538,7 @@
   "open": "Open",
   "close": "Close",
   "upgrade": "Upgrade",
-  "buy_us_number_button": "Buy US number for {{priceInDollars}}/month",
+  "buy_us_number_button": "Buy US number for {{priceInDollars}}$/month",
   "upgrade_to_access_recordings_title": "Upgrade to access recordings",
   "upgrade_to_access_recordings_description": "Recordings are only available as part of our teams plan. Upgrade to start recording your calls",
   "upgrade_to_cal_ai_phone_number_description": "Upgrade to Enterprise to generate an AI Agent phone number that can call guests to schedule calls",
