--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -4,6 +4,8 @@
   "edit_event_subtitle":"Create events to share for people to book on your calendar.",
   "custom_reply_to_email_no_verified_emails":"No verified emails configured on profile",
   "event_icon_updated":"Event icon updated successfully",
+  "autorefund":"Enable auto refund of this paid event to the booker",
+  "autorefund_info":"Enabling auto refund will ensure that event attendees receive a refund if the event is successfully canceled.",
   "identity_provider": "Identity provider",
   "trial_days_left": "You have $t(day, {\"count\": {{days}} }) left on your PRO trial",
   "day_one": "{{count}} day",
