fix dialog on how to use form responses as variables

--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -1477,12 +1477,14 @@
   "example_1": "Example 1",
   "example_2": "Example 2",
   "booking_question_identifier": "Booking Question Identifier",
+  "form_field_identifier": "Form Field Identifier",
   "company_size": "Company size",
   "what_help_needed": "What do you need help with?",
   "variable_format": "Variable format",
   "webhook_subscriber_url_reserved": "Webhook subscriber url is already defined",
   "custom_input_as_variable_info": "Ignore all special characters of the additional input label (use only letters and numbers), use uppercase for all letters and replace whitespaces with underscores.",
   "using_booking_questions_as_variables": "How do I use booking questions as variables?",
+  "using_form_responses_as_variables": "How do I use form responses as variables?",
   "download_desktop_app": "Download desktop app",
   "set_ping_link": "Set Ping link",
   "rate_limit_exceeded": "Rate limit exceeded",
@@ -3506,7 +3508,7 @@
   "form_submitted_time_variable": "Form Submitted Time",
   "form_responses_variable": "Form Responses",
   "team_name_variable": "Team Name",
-  "how_form_variables": "How to use form variables",
+  "how_form_responses_as_variables": "How to use form responses as variables",
   "location_custom_label_input_label": "Custom label on booking page",
   "meeting_link": "Meeting link",
   "my_bookings": "My Bookings",
